[tool.poetry]
name = "nws-spatial"
version = "0.1.0"
description = ""
authors = ["colinbrust <colin.brust@gmail.com>"]
readme = "README.md"
packages = [{include = "nws_spatial"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pandas = "^2.1.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
